--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.3.0
+  socket_io_client: ^2.0.0
+  dio: ^4.0.6
+  provider: ^6.0.5
+  flutter_secure_storage: ^5.0.2
 
 dev_dependencies:
   flutter_test:
