--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.0.5
   flutter_secure_storage: ^5.0.2
   fluttertoast: ^8.1.2
+  after_layout: ^1.1.1+1
 
 dev_dependencies:
   flutter_test:
